<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".TiendaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/med">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre"
            app:endIconMode="clear_text"
            app:helperText="@string/helper_requerido"
            app:counterMaxLength="@integer/max_etName"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_store"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/max_etName"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:layout_marginTop="@dimen/med"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_phone"
            app:counterMaxLength="@integer/max_etPhone"
            app:counterEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/max_etPhone"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/med"
            android:hint="@string/hint_direccion"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/max_etDireccion"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_direccion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@integer/max_etDireccion"
                android:inputType="textPostalAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/med"
            android:hint="@string/hint_web"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_web"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="@integer/min_etWeb"
                android:maxLines="@integer/max_etWeb"
                android:inputType="textMultiLine"
                android:textAppearance="?attr/textAppearanceCaption"
                android:textColor="@color/color_link"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/med"
            android:layout_gravity="center_vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilImg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/med"
                android:hint="@string/hint_Img"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_web"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minLines="@integer/min_etImg"
                    android:maxLines="@integer/max_etImg"
                    android:inputType="textMultiLine"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="@color/color_link"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgPhoto"
                android:layout_width="@dimen/phono_min"
                android:layout_height="@dimen/phono_min"
                android:src="@drawable/ic_image"
                android:contentDescription="@string/cd_photo"
                android:layout_marginStart="@dimen/med"/>
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>